# MasjidApp

BackEnd/Database/: 02-create-tables.sql  03-create-procedures.sql  04-create-admin-users.sql  05-create-public-users.sql
BackEnd/api/masjid_app_admin_manager_api/src/: main.rs
BackEnd/api/masjid_app_admin_manager_api/src/features/: mod.rs
BackEnd/api/masjid_app_admin_manager_api/src/features/donation/: repositories.rs  services.rs
BackEnd/api/masjid_app_api_integration_testing/tests/features/: mod.rs
BackEnd/api/masjid_app_api_library/: Cargo.toml
BackEnd/api/masjid_app_api_library/src/features/donation/models/: donation_details.rs  donation_history.rs  donation_intention.rs  donation_method.rs  mod.rs
BackEnd/api/masjid_app_api_library/src/features/donation/services/: services.rs
BackEnd/api/masjid_app_api_library/src/shared/: mod.rs
BackEnd/api/masjid_app_api_library/src/shared/common_service_impl/: mod.rs
BackEnd/api/masjid_app_api_library/src/shared/data_access/: repository_manager.rs
BackEnd/api/masjid_app_api_library/src/shared/http_responses/: bad_request.rs  mod.rs
BackEnd/api/masjid_app_api_library/src/shared/payment/: billing_address.rs  card_details.rs  errors.rs  mod.rs  service.rs  transaction_declined_reason.rs  transaction_status.rs
BackEnd/api/masjid_app_api_library/src/shared/types/: contact_details.rs  mod.rs  personal_title.rs  recurrence.rs
BackEnd/api/masjid_app_public_api/src/: main.rs
BackEnd/api/masjid_app_public_api/src/features/: mod.rs
BackEnd/api/masjid_app_public_api/src/features/donation/: errors.rs  mod.rs  (+2 more)
(+16 files in other folders)
