[package]
name = "masjid_app_api_library"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-native-tls", "mysql", "chrono"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.0", features = ["std", "fmt", "json", "env-filter"] }
serde = { version = "1.0.228", features = ["derive"] }

mockall = "0.14.0"
axum = { version = "0.8.8", features = ["multipart"] }
async-trait = "0.1.89"
chrono = { version = "0.4.42", features = ["serde"] }
validator = { version = "0.20.0", features = ["derive", "card"] }
serde_json = "1.0.145"
enum_stringify = "0.6.4"
regex = "1.11.1"